--- a/leanchatlib/src/main/res/layout/chat_bottom_add_layout.xml
+++ b/leanchatlib/src/main/res/layout/chat_bottom_add_layout.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
-    android:id="@+id/chatAddLayout"
+    android:id="@+id/input_bar_layout_action"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="@dimen/chat_bottom_more_height"
@@ -10,7 +10,7 @@
     android:weightSum="4">
 
     <TextView
-        android:id="@+id/addImageBtn"
+        android:id="@+id/input_bar_btn_picture"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1.0"
@@ -20,7 +20,7 @@
         android:text="@string/chat_bottom_picture" />
 
     <TextView
-        android:id="@+id/addCameraBtn"
+        android:id="@+id/input_bar_btn_camera"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1.0"
@@ -30,7 +30,7 @@
         android:text="@string/chat_bottom_camera" />
 
     <TextView
-        android:id="@+id/addLocationBtn"
+        android:id="@+id/input_bar_btn_location"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1.0"
@@ -38,5 +38,4 @@
         android:drawableTop="@drawable/chat_button_add_location_selector"
         android:gravity="center"
         android:text="@string/chat_bottom_location" />
-
 </LinearLayout>
