--- a/leanchatlib/src/main/res/layout/chat_bottom_more_layout.xml
+++ b/leanchatlib/src/main/res/layout/chat_bottom_more_layout.xml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <LinearLayout
-    android:id="@+id/chatMoreLayout"
+    android:id="@+id/input_bar_layout_more"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical"
-    android:visibility="visible">
+    android:orientation="vertical">
 
     <View
         android:layout_width="fill_parent"
@@ -15,19 +14,17 @@
         android:focusable="false" />
 
     <LinearLayout
-        android:id="@+id/chatEmotionLayout"
+        android:id="@+id/input_bar_layout_emotion"
         android:layout_width="match_parent"
         android:layout_height="@dimen/chat_bottom_more_height"
         android:orientation="vertical"
         android:visibility="gone">
 
         <android.support.v4.view.ViewPager
-            android:id="@+id/emotionPager"
+            android:id="@+id/input_bar_viewpager_emotin"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
     </LinearLayout>
 
-    <include
-
-        layout="@layout/chat_bottom_add_layout" />
+    <include layout="@layout/chat_bottom_add_layout" />
 </LinearLayout>
