--- a/leanchatlib/src/main/res/layout/chat_item_right_layout.xml
+++ b/leanchatlib/src/main/res/layout/chat_item_right_layout.xml
@@ -26,6 +26,7 @@
             android:id="@+id/chat_right_layout_status"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:visibility="gone"
             android:layout_alignLeft="@+id/chat_right_layout_content">
 
             <ProgressBar
@@ -75,5 +76,9 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="3dp"
         android:layout_marginBottom="3dp"
+        android:singleLine="true"
+        android:ellipsize="end"
+        android:text="fasdfsadfsadf"
+        android:layout_gravity="right"
         android:gravity="right"/>
 </LinearLayout>
