--- a/leanchat/src/main/res/layout/message_fragment.xml
+++ b/leanchat/src/main/res/layout/message_fragment.xml
@@ -1,5 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
-
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -9,10 +8,15 @@
 
     <include layout="@layout/chat_client_state_view" />
 
-    <com.avoscloud.chat.ui.view.BaseListView
-        android:id="@+id/convList"
+    <android.support.v4.widget.SwipeRefreshLayout
+        android:id="@+id/fragment_conversation_srl_pullrefresh"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:cacheColorHint="#00000000"
-        android:divider="@null" />
+        android:layout_above="@+id/fragment_chat_inputbottombar">
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/fragment_conversation_srl_view"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>
+    </android.support.v4.widget.SwipeRefreshLayout>
 </LinearLayout>
