--- a/leanchatlib/src/main/res/layout/chat_client_state_view.xml
+++ b/leanchatlib/src/main/res/layout/chat_client_state_view.xml
@@ -8,7 +8,7 @@
     android:gravity="center_vertical"
     android:orientation="horizontal"
     android:padding="10dp"
-    android:visibility="visible">
+    android:visibility="gone">
 
     <ImageView
         android:layout_width="30dp"
