change list view to recyclerView

--- a/leanchat/src/main/res/layout/discover_fragment.xml
+++ b/leanchat/src/main/res/layout/discover_fragment.xml
@@ -8,15 +8,16 @@
 
     <include layout="@layout/common_header_layout" />
 
-    <com.avoscloud.chat.view.BaseListView
-        android:id="@+id/list_near"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:cacheColorHint="@android:color/transparent"
-        android:divider="@drawable/base_horizontal_line"
-        android:dividerHeight="1dp"
-        android:fadingEdgeLength="0dp"
-        android:fastScrollEnabled="true"
-        android:paddingBottom="10dp" />
+    <include layout="@layout/chat_client_state_view" />
 
+    <com.avoscloud.leanchatlib.view.TwoWaySwipeLayout
+        android:id="@+id/fragment_near_srl_pullrefresh"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/fragment_near_srl_view"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>
+    </com.avoscloud.leanchatlib.view.TwoWaySwipeLayout>
 </LinearLayout>
