--- a/leanchat/src/main/res/layout/contact_new_friend_activity.xml
+++ b/leanchat/src/main/res/layout/contact_new_friend_activity.xml
@@ -5,15 +5,8 @@
     android:background="@color/contact_base_bg"
     android:orientation="vertical">
 
-    <com.avoscloud.chat.view.BaseListView
+    <com.avoscloud.leanchatlib.view.CustomRecyclerView
         android:id="@+id/newfriendList"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@android:color/transparent"
-        android:cacheColorHint="#00000000"
-        android:descendantFocusability="afterDescendants"
-        android:divider="@drawable/base_horizontal_line"
-        android:dividerHeight="1dp"
-        android:fastScrollEnabled="false" />
-
+        android:layout_height="match_parent"/>
 </LinearLayout>
