--- a/leanchat/src/main/res/layout/contact_add_friend_activity.xml
+++ b/leanchat/src/main/res/layout/contact_add_friend_activity.xml
@@ -35,15 +35,9 @@
             android:textSize="14sp" />
     </LinearLayout>
 
-    <com.avoscloud.chat.view.BaseListView
-        android:id="@+id/searchList"
+    <com.avoscloud.leanchatlib.view.CustomRecyclerView
+        android:id="@+id/search_user_rv_layout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:cacheColorHint="@android:color/transparent"
-        android:divider="@drawable/base_horizontal_line"
-        android:dividerHeight="1dp"
-        android:fadingEdgeLength="0dp"
-        android:fastScrollEnabled="true"
-        android:paddingBottom="10dp" />
+        android:layout_height="match_parent"/>
 
 </LinearLayout>
