--- a/leanchatlib-demo/src/main/res/layout/activity_login.xml
+++ b/leanchatlib-demo/src/main/res/layout/activity_login.xml
@@ -1,27 +1,24 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:gravity="center"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context=".LoginActivity">
-
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:gravity="center"
+                android:paddingBottom="@dimen/activity_vertical_margin"
+                android:paddingLeft="@dimen/activity_horizontal_margin"
+                android:paddingRight="@dimen/activity_horizontal_margin"
+                android:paddingTop="@dimen/activity_vertical_margin">
 
     <EditText
-        android:id="@+id/selfIdEditText"
+        android:id="@+id/login_tv_name"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
-        android:hint="请输入自己的 ID" />
+        android:hint="请输入 ID" />
 
     <Button
-        android:id="@+id/login"
+        android:id="@+id/login_btn_login"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/selfIdEditText"
+        android:layout_below="@id/login_tv_name"
         android:width="200dp"
-        android:text="登录" />
+        android:text="Go" />
 
 </RelativeLayout>
