--- a/leanchatlib-demo/src/main/res/layout/activity_main.xml
+++ b/leanchatlib-demo/src/main/res/layout/activity_main.xml
@@ -1,26 +1,24 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<?xml version="1.0" encoding="utf-8"?>
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+              xmlns:app="http://schemas.android.com/apk/res-auto"
+              android:orientation="vertical"
+              android:layout_width="match_parent"
+              android:layout_height="match_parent">
+
+    <include layout="@layout/tool_bar"/>
+
+<android.support.design.widget.TabLayout
+    android:id="@+id/tablayout"
+    app:tabSelectedTextColor="@android:color/holo_blue_bright"
+    app:tabTextColor="@android:color/black"
+    app:tabIndicatorColor="@android:color/holo_blue_bright"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:gravity="center"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.avoscloud.leanchatlib_demo.MainActivity">
+    android:layout_height="wrap_content"/>
 
-    <EditText
-        android:id="@+id/otherIdEditText"
-        android:layout_width="200dp"
-        android:layout_height="wrap_content"
-        android:hint="请输入对方的 ID" />
-
-    <Button
-        android:id="@+id/chatButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/otherIdEditText"
-        android:width="200dp"
-        android:text="Go" />
-
-</RelativeLayout>
+    <android.support.v4.view.ViewPager
+        android:id="@+id/pager"
+        android:layout_height="match_parent"
+        android:layout_width="match_parent"
+        android:layout_weight="1">
+    </android.support.v4.view.ViewPager>
+</LinearLayout>
