--- a/leanchatlib-demo/src/main/res/values/styles.xml
+++ b/leanchatlib-demo/src/main/res/values/styles.xml
@@ -1,4 +1,9 @@
 <resources>
-
-
+    <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
+        <!-- Customize your theme here. -->
+        <item name="colorPrimary">@color/common_blue</item>
+        <item name="colorPrimaryDark">@color/common_blue</item>
+        <item name="colorAccent">@color/common_blue</item>
+        <item name="android:textColorPrimary">@android:color/white</item>
+    </style>
 </resources>
