--- a/leanchatlib/src/main/res/values/colors.xml
+++ b/leanchatlib/src/main/res/values/colors.xml
@@ -1,5 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <color name="common_blue">#2c97e8</color>
+    <color name="common_gray">#898989</color>
+
+    <color name="divider_line_color">#afafaf</color>
+    <color name="login_activity_bg">#efefef</color>
+
+
     <color name="chat_common_blue">#2C97E8</color>
     <color name="chat_transparent">#ffff</color>
     <color name="chat_base_color_text_black">#3e3e39</color>
