--- a/leanchatlib/src/main/res/values/dimens.xml
+++ b/leanchatlib/src/main/res/values/dimens.xml
@@ -1,5 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <dimen name="activity_horizontal_margin">16dp</dimen>
+    <dimen name="activity_vertical_margin">16dp</dimen>
+    <dimen name="common_horizontal_margin">15dp</dimen>
+    <dimen name="common_vertical_margin">10dp</dimen>
+    <dimen name="common_left_margin">@dimen/common_horizontal_margin</dimen>
+    <dimen name="common_right_margin">@dimen/common_horizontal_margin</dimen>
+
+    <dimen name="divider_line_height">1px</dimen>
+
+    <!-- textsize -->
+    <dimen name="textsize_small">18sp</dimen>
+    <dimen name="textsize_normal">20sp</dimen>
+    <dimen name="textsize_large">22sp</dimen>
+    <dimen name="textsize_larger">24sp</dimen>
+    <dimen name="textsize_largest">26sp</dimen>
+
+    <!-- button -->
+    <dimen name="button_big_height">50dp</dimen>
+
+    <!-- textview height -->
+    <dimen name="textview_height_big">45dp</dimen>
+
+
+
+
+
+    <!-- 以下需要再整理 -->
     <dimen name="chat_BottomHeight">50dp</dimen>
     <dimen name="chat_style_avatar_userHead">45dp</dimen>
     <dimen name="chat_ItemMarginTop">5dp</dimen>
