--- a/leanchatlib-demo/src/main/res/layout/activity_login.xml
+++ b/leanchatlib-demo/src/main/res/layout/activity_login.xml
@@ -2,23 +2,18 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:gravity="center"
-                android:paddingBottom="@dimen/activity_vertical_margin"
-                android:paddingLeft="@dimen/activity_horizontal_margin"
-                android:paddingRight="@dimen/activity_horizontal_margin"
-                android:paddingTop="@dimen/activity_vertical_margin">
+                android:background="@color/login_activity_bg">
 
     <EditText
-        android:id="@+id/login_tv_name"
-        android:layout_width="200dp"
-        android:layout_height="wrap_content"
-        android:hint="请输入 ID" />
+        android:id="@+id/activity_login_et_username"
+        style="@style/TextView.Large"
+        android:hint="@string/login_null_name_tip"
+        android:maxLength="50" />
 
     <Button
-        android:id="@+id/login_btn_login"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/login_tv_name"
-        android:width="200dp"
-        android:text="Go" />
-
+        android:id="@+id/activity_login_btn_login"
+        style="@style/Button.Larger"
+        android:layout_marginTop="60dp"
+        android:background="@drawable/login_btn_bg"
+        android:text="@string/login"/>
 </RelativeLayout>
