--- a/leanchatlib-demo/src/main/res/layout/activity_main.xml
+++ b/leanchatlib-demo/src/main/res/layout/activity_main.xml
@@ -1,24 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               xmlns:app="http://schemas.android.com/apk/res-auto"
-              android:orientation="vertical"
               android:layout_width="match_parent"
-              android:layout_height="match_parent">
+              android:layout_height="match_parent"
+              android:background="@color/login_activity_bg"
+              android:orientation="vertical">
 
     <include layout="@layout/tool_bar"/>
 
-<android.support.design.widget.TabLayout
-    android:id="@+id/tablayout"
-    app:tabSelectedTextColor="@android:color/holo_blue_bright"
-    app:tabTextColor="@android:color/black"
-    app:tabIndicatorColor="@android:color/holo_blue_bright"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"/>
+    <android.support.design.widget.TabLayout
+        android:id="@+id/tablayout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/common_blue"
+        app:tabIndicatorColor="@android:color/white"
+        app:tabSelectedTextColor="@android:color/white"
+        app:tabTextColor="@color/lighter_gray"/>
 
     <android.support.v4.view.ViewPager
         android:id="@+id/pager"
-        android:layout_height="match_parent"
         android:layout_width="match_parent"
+        android:layout_height="0dp"
         android:layout_weight="1">
     </android.support.v4.view.ViewPager>
 </LinearLayout>
