--- a/leanchatlib-demo/src/main/res/values/styles.xml
+++ b/leanchatlib-demo/src/main/res/values/styles.xml
@@ -1,9 +1,12 @@
 <resources>
     <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
-        <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/common_blue</item>
         <item name="colorPrimaryDark">@color/common_blue</item>
         <item name="colorAccent">@color/common_blue</item>
         <item name="android:textColorPrimary">@android:color/white</item>
+    </style>
+
+    <style name="Button.Logout" parent="Button.Larger">
+        <item name="android:background">@drawable/btn_logout_selector</item>
     </style>
 </resources>
