--- a/leanchatlib/src/main/res/values/colors.xml
+++ b/leanchatlib/src/main/res/values/colors.xml
@@ -3,6 +3,7 @@
     <color name="common_blue">#2c97e8</color>
     <color name="common_gray">#898989</color>
 
+    <color name="activity_default_color">#00000000</color>
     <color name="divider_line_color">#afafaf</color>
     <color name="login_activity_bg">#efefef</color>
 
