--- a/leanchatlib/src/main/res/values/styles.xml
+++ b/leanchatlib/src/main/res/values/styles.xml
@@ -2,13 +2,19 @@
 <resources>
 
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+    <style name="AppTheme" parent="Theme.AppCompat.Light">
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/common_blue</item>
         <item name="colorPrimaryDark">@color/common_blue</item>
         <item name="colorAccent">@color/common_blue</item>
         <item name="android:textColorPrimary">@android:color/white</item>
+        <item name="android:editTextStyle">@style/EditTextStyle</item>
     </style>
+
+    <style name="EditTextStyle" parent="Widget.AppCompat.EditText">
+        <item name="android:textColor">@android:color/black</item>
+    </style>
+
 
     <style name="AVActivity" parent="AppTheme"/>
 
@@ -16,7 +22,6 @@
         <item name="colorPrimary">@color/common_blue</item>
         <item name="colorPrimaryDark">@color/common_blue</item>
         <item name="colorAccent">@color/common_blue</item>
-        <item name="android:textColorPrimary">@android:color/white</item>
     </style>
 
     <style name="AVActivity.FullScreen" >
