--- a/leanchatlib/src/main/res/values/styles.xml
+++ b/leanchatlib/src/main/res/values/styles.xml
@@ -8,14 +8,11 @@
         <item name="colorPrimaryDark">@color/common_blue</item>
         <item name="colorAccent">@color/common_blue</item>
         <item name="android:textColorPrimary">@android:color/white</item>
-        <item name="android:editTextStyle">@style/EditTextStyle</item>
-    </style>
-
-    <style name="EditTextStyle" parent="Widget.AppCompat.EditText">
-        <item name="android:textColor">@android:color/black</item>
+        <item name="android:editTextStyle">@style/EditText</item>
     </style>
 
 
+    <!-- activity -->
     <style name="AVActivity" parent="AppTheme"/>
 
     <style name="AVActivity.NoActionBar" parent="Theme.AppCompat.Light.NoActionBar">
@@ -23,30 +20,15 @@
         <item name="colorPrimaryDark">@color/common_blue</item>
         <item name="colorAccent">@color/common_blue</item>
         <item name="android:textColorPrimary">@android:color/white</item>
-        <item name="android:editTextStyle">@style/EditTextStyle</item>
+        <item name="android:editTextStyle">@style/EditText</item>
     </style>
 
     <style name="AVActivity.FullScreen" >
         <item name="android:windowFullscreen">true</item>
     </style>
 
-    <style name="BigFont">
-        <item name="android:textColor">@android:color/white</item>
-        <item name="android:textSize">70dp</item>
-        <item name="android:layout_height">wrap_content</item>
-        <item name="android:layout_width">wrap_content</item>
-        <item name="android:layout_marginBottom">14dp</item>
-    </style>
 
-    <style name="SmallFont">
-        <item name="android:textColor">@android:color/white</item>
-        <item name="android:textSize">16dp</item>
-        <item name="android:layout_height">wrap_content</item>
-        <item name="android:layout_width">wrap_content</item>
-    </style>
-
-    <style name="AVTheme" parent="Theme.AppCompat.Light"/>
-
+    <!-- divider -->
     <style name="DividerLine">
         <item name="android:background">@color/divider_line_color</item>
     </style>
@@ -61,7 +43,11 @@
         <item name="android:layout_width">@dimen/divider_line_height</item>
     </style>
 
-    <style name="EditText"/>
+
+    <!-- editText -->
+    <style name="EditText" parent="Widget.AppCompat.EditText">
+        <item name="android:textColor">@android:color/black</item>
+    </style>
 
     <style name="EditText.UserName">
         <item name="android:singleLine">true</item>
