--- a/leanchatlib-demo/src/main/res/layout/common_user_item.xml
+++ b/leanchatlib-demo/src/main/res/layout/common_user_item.xml
@@ -5,12 +5,10 @@
     android:gravity="center_vertical">
     <ImageView
         android:id="@+id/img_friend_avatar"
-        android:layout_height="40dp"
-        android:layout_width="40dp"
+        style="@style/Avatar.Small"
         android:layout_alignParentLeft="true"
         android:layout_centerVertical="true"
-        android:layout_marginLeft="10dp"
-        android:src="@drawable/chat_default_user_avatar" />
+        android:layout_marginLeft="10dp"/>
 
     <TextView
         android:layout_width="match_parent"
